--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,10 @@ jobs:
     docker:
       - image: docker:17.05.0-ce-git
     steps:
+
       - checkout
-      - setup_remote_docker:
-         docker_layer_caching: true
+      - setup_remote_docker
+
       - run:
           name: Install dependencies
           command: |
